# mcap

./: .gitattributes  .gitignore  .lfsconfig  .prettierignore  .prettierrc.yml  .swiftformat  .swiftlint.yml  .typos.toml  .yarnrc.yml  404.html  AGENTS.md  CNAME  Cargo.toml  FRONTEND_GUIDE.md  PLAN.md  Package.resolved  Package.swift  Pipfile  README.md  RELEASE.md  RELEASING.md  _config.yml  cspell.config.yaml  flake.nix  index.html  index.md  mcap.code-workspace  mkdocs.yml  package.json  sitemap.xml  support-matrix.html
cpp/: .clang-format  .dockerignore  .gitignore  .hdoc.toml  CMakeLists.txt  Makefile  README.md  build-docs.sh  build.sh  ci.Dockerfile  dev.Dockerfile  docker-compose.yml  e3B3464E30CB968FB.html  enums.html  f0DE0E65432B9A8A5.html  f2BBBAAC43F0662AC.html  f3146EDDDF05810C8.html  f44B073C69021A85F.html  f459C768052BE0D53.html  f5931ECDD5F92A9E5.html  f5AF48755DADB8134.html  f5F4F7EAEFE8B1B7F.html  f61638328C3333024.html  f7F4FCD0A920DAC33.html  f9AB04E305DCF659A.html  fA83DE2E9E30536C4.html  fAD4C9313DCFC1A74.html  fB529CA71E8F329F6.html  fCA83CD137096EB8E.html  fCCA306E587224666.html  fCEFC29292E86A18D.html  fEACABA95FC9C22AD.html  fEFEEAE68503D391B.html  fF4C263A527BF1CAD.html  fF9647FD007A9C372.html  functions.html  hdoc.Dockerfile  hdoc.patch  index.json  r0271EDE525523B51.html  (+36 more)
cpp/bench/: CMakeLists.txt  conanfile.py  run.cpp
cpp/cmake/: FindLZ4.cmake  FindZSTD.cmake  McapDependencies.cmake  mcap-config.cmake.in
cpp/docs/: CMakeLists.txt  conanfile.py  docs-entrypoint.cpp
cpp/examples/: CMakeLists.txt  bag2mcap.cpp  conanfile.py  mcapdump.cpp  rotatemcap.cpp  writemcap.cpp
cpp/examples/jsonschema/: CMakeLists.txt  reader.cpp  writer.cpp
cpp/examples/protobuf/: BuildFileDescriptorSet.cpp  BuildFileDescriptorSet.h  CMakeLists.txt  dynamic_reader.cpp  reader.cpp  static_reader.cpp  unit_tests.cpp  write_zfp_images.cpp  writer.cpp
cpp/examples/protobuf_pointcloud_writer/: CMakeLists.txt  protobuf_pointcloud_writer.cpp
cpp/mcap/: CMakeLists.txt  LICENSE  conanfile.py  mcap.cpp
cpp/mcap/src/: reader.cpp  types.cpp  writer.cpp
cpp/scripts/: format.py
cpp/test/: CMakeLists.txt  conanfile.py  indexed_reader_conformance.cpp  parallel_reader_test.cpp  streamed-reader-conformance.cpp  streamed-writer-conformance.cpp  streamed_reader_conformance.cpp  streamed_writer_conformance.cpp  test.cpp  test_odr.cpp  unit-tests.cpp  unit_tests.cpp
cpp/test/data/: 001.mcap
cpp/test_package/: CMakeLists.txt  conanfile.py  test_odr.cpp
python/: .flake8  .gitignore  .isort.cfg  Makefile  Pipfile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
python/.doctrees/: environment.pickle  index.doctree
python/.doctrees/__apidoc__/: index.doctree  mcap.doctree  mcap.mcap0.chunk_builder.doctree  mcap.mcap0.data_stream.doctree  mcap.mcap0.doctree  mcap.mcap0.exceptions.doctree  mcap.mcap0.opcode.doctree  mcap.mcap0.records.doctree  mcap.mcap0.serialization.doctree  mcap.mcap0.stream_reader.doctree  mcap.mcap0.writer.doctree
python/.doctrees/apidoc/: index.doctree  mcap.mcap0.chunk_builder.doctree  mcap.mcap0.data_stream.doctree  mcap.mcap0.doctree  mcap.mcap0.records.doctree  mcap.mcap0.serialization.doctree  mcap.mcap0.writer.doctree
python/__apidoc__/: index.html  mcap.html  mcap.mcap0.chunk_builder.html  mcap.mcap0.data_stream.html  mcap.mcap0.exceptions.html  mcap.mcap0.html  mcap.mcap0.opcode.html  mcap.mcap0.records.html  mcap.mcap0.serialization.html  mcap.mcap0.stream_reader.html  mcap.mcap0.writer.html
python/_modules/: index.html
python/_sources/: index.rst.txt
python/_sources/apidoc/: mcap.mcap0.chunk_builder.rst.txt
python/apidoc/: mcap.html  mcap.mcap0.data_stream.html  mcap.mcap0.html  mcap.mcap0.opcode.html  mcap.mcap0.records.html  mcap.mcap0.stream_reader.html  mcap.mcap0.writer.html
python/docs/: conf.py  index.rst  jsonschema_tutorial.rst  raw_reader_writer_example.rst  ros1_example.rst  ros2_example.rst  ros2_noenv_example.rst
python/docs/__apidoc__/: mcap.mcap0.data_stream.rst  mcap.mcap0.records.rst
python/docs/apidoc/: mcap.mcap0.serialization.rst
python/examples/jsonschema/: PointCloud.json  bus.csv  pointcloud_csv_to_mcap.py
python/examples/metadata/: reader.py  writer.py
python/examples/protobuf/: .gitignore  complex_message_pb2.py  example.mcap  image_example.py  point_cloud_example.py  reader.py  setup.sh  simple_message.proto  simple_message_pb2.py  writer.py  writing_example.py
python/examples/raw/: append.py  reader.py  writer.py
python/examples/ros1/: reader.py  writer.py
python/examples/ros2/: Makefile  (+4 more)
python/mcap/: README.md  data_stream.py  records.py  setup.cfg  well_known.py  writer.py
python/mcap-protobuf-support/: README.md  pyproject.toml  setup.cfg
python/mcap-ros1-support/: README.md  pyproject.toml  setup.cfg
python/mcap-ros2-support/: README.md  pyproject.toml  setup.cfg
python/mcap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/mcap0/: DataStream.py  Records.py  StreamReader.py  StreamWriter.py
python/tests/: run_reader_test.py  run_writer_test.py  test_chunk_log_time.py  test_mcap_reader.py  test_mcap_writer.py  test_read_conformance.py  test_reader.py  test_stream_reader.py  test_write_conformance.py  test_writer.py
rust/: .gdb_history  .gitignore  Cargo.toml  README.md
rust/benches/: reader.rs
rust/cli/: AGENTS.md  Cargo.toml  PLAN.md  README.md  TEST_PLAN.md  build.rs
rust/examples/: conformance_indexed_reader.rs  conformance_reader.rs  conformance_reader_async.rs  conformance_writer.rs  conformance_writer_linear.rs  loop.rs  mcapcat.rs  mcapcopy.rs  recover.rs
rust/mcap/: Cargo.toml  README.md
rust/mcap_cli/: Cargo.toml  README.md
rust/src/: channels.rs  chunk_sink.rs  conformance_reader.rs  io.rs  io_utils.rs  lexer.rs  lib.rs  parse.rs  read.rs  record_iterator.rs  records.rs  sans_io.rs  tokio.rs  write.rs
rust/tests/: attachment.rs  chunks.rs  common.rs  compression.rs  flush.rs  handles_time0_messages.rs  message.rs  metadata.rs  round_trip.rs  weird_bug.rs
(+4415 files in other folders)
