[metadata]
name = mcap
version = 0.0.5
description = MCAP libraries for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/mcap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_requires = 
    lz4
    zstd
packages = find:
python_requires = >=3.8
