[metadata]
name = mcap
version = 0.0.7
description = MCAP libraries for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/mcap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
install_requires = 
    lz4
    zstd
packages = find:
python_requires = >=3.7

[options.package_data]
mcap = py.typed
