[metadata]
name = mcap-protobuf-support
version = 0.0.5
description = Protobuf support for the Python MCAP library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/mcap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_requires = 
    mcap
    protobuf
install_package_data = True
packages = find:
python_requires = >=3.7

[options.package_data]
mcap_protobuf = py.typed
