[metadata]
name = mcap-protobuf-support
version = attr: mcap_protobuf.__version__
description = Protobuf support for the Python MCAP library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/mcap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    mcap>=0.0.14
    # Protobuf versions 4.22-4.24 are excluded as they contain a bug that can cause a segmentation
    # fault when reading a mcap file: https://github.com/protocolbuffers/protobuf/issues/12047
    protobuf>=3.8,!=4.22.*,!=4.23.*,!=4.24.*
install_package_data = True
packages = find:
python_requires = >=3.7

[options.package_data]
mcap_protobuf = py.typed
