[metadata]
name = mcap-ros1-support
version = attr: mcap_ros1.__version__
description = ROS1 support for the Python MCAP library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/mcap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_package_data = True
install_requires = 
    mcap
packages = find:
python_requires = >=3.7

[options.package_data]
mcap_ros1 = py.typed
