[metadata]
name = mcap-ros2-support
version = attr: mcap_ros2.__version__
description = ROS2 support for the Python MCAP library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/mcap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_package_data = True
install_requires =
    mcap>=0.0.14
python_requires = >=3.7

[options.package_data]
mcap_ros2 = py.typed
