[metadata]
name = mcap
version = attr: mcap.__version__
description = MCAP libraries for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/mcap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
install_requires =
    lz4
    zstandard
python_requires = >=3.7

[options.package_data]
mcap = py.typed
