[package]
name = "mcap-cli"
description = "MCAP CLI"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
mcap = { path = ".." }
chrono = { version = "0.4", default-features = true, features = ["clock"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
