[package]
name = "mcap-cli"
description = "MCAP CLI"
version = "0.3.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "mcap"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bzip2 = "0.6"
lz4 = "1"
binrw = "0.15"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crc32fast = "1"
csv = "1"
log = "0.4"
memmap2 = "0.9"
mcap = { path = "../mcap" }
regex = "1"
serde_json = "1"
simplelog = "0.12"
prost-reflect = { version = "0.16.4", features = ["serde"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
tempfile = "3.27.0"
object_store = { version = "0.13.2", features = ["aws", "gcp", "azure", "http"] }
tokio = { version = "1.52.3", features = ["net", "rt", "time"] }
url = "2.5.8"
futures-util = "0.3.32"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "commands"
harness = false
