[package]
name = "mcap_cli"
description = "MCAP CLI"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "mcap"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bzip2 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
lz4 = "1"
log = "0.4"
memmap2 = "0.9"
mcap = { path = "../mcap" }
serde_json = "1"
simplelog = "0.12"
