add_executable(example_json_writer writer.cpp)
target_link_libraries(example_json_writer PRIVATE mcap::mcap mcap::vendor_nlohmann)
target_compile_definitions(example_json_writer PRIVATE _USE_MATH_DEFINES)
add_executable(example_json_reader reader.cpp)
target_link_libraries(example_json_reader PRIVATE mcap::mcap mcap::vendor_nlohmann)
