<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_mcap_demo</name>
  <version>0.0.1</version>
  <description>Example ROS2 scripts for reading and writing MCAP files</description>
  <maintainer email="james@foxglove.dev">James Smith</maintainer>
  <license>MIT</license>

  <depend>rosbag2_py</depend>
  <depend>rosbag2_storage_mcap</depend>
  <depend>std_msgs</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
